servidorPush/k8s-manifests/konga/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: konga-ingress
  namespace: kong
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: evolua.antidrone.com.br
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: konga
            port:
              number: 80
